--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,40 +1,38 @@
+body {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+}
+
 div {
-  position: fixed;
-  top: 50%;
+  text-align: center;
+  position: relative;
+  box-sizing: border-box;
+  width: 500px;
   left: 50%;
+  top: 50%;
   transform: translate(-50%, -50%);
 }
 
 div div {
-  position: relative;
-  height: auto;
-  width: 500px;
-  left: 50%;
   transform: translate(-50%);
 }
 
 div input {
   position: relative;
-  height: auto;
-  left: 50%;
-  transform: translate(-50%);
+  width: 50%;
 }
 
 div button {
   position: relative;
-  height: auto;
-  left: 50%;
-  transform: translate(-100%);
 }
 
-p {
+div p {
   margin: 0px;
-  font-size: 40px;
   position: relative;
-  height: auto;
-  width: fit-content;
-  left: 50%;
-  transform: translate(-50%);
+  display: inline-block;
+  font-size: 30px;
+  transform: translate(0px, -35px);
 }
 span {
   position: relative;
