--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,14 +1,19 @@
-body {
+* {
+  box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
+  border: 0px;
   position: relative;
+}
+
+body {
   width: 100%;
   height: 100vh;
 }
 
 div {
   text-align: center;
-  position: relative;
-  box-sizing: border-box;
-  max-width: 500px;
+  width: 500px;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
@@ -19,22 +24,20 @@ div div {
 }
 
 div input {
-  position: relative;
+  border: 1px solid gray;
   width: 50%;
 }
-
 div button {
-  position: relative;
+  border: 1px solid lightgray;
+  border-radius: 4px;
+  width: 15%;
 }
 
 div p {
-  margin: 0px;
-  position: relative;
   display: inline-block;
   font-size: 30px;
   transform: translate(0px, -35px);
 }
 span {
-  position: relative;
   margin: 2px;
 }
