--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -13,7 +13,7 @@ body {
 
 div {
   text-align: center;
-  width: 500px;
+  width: max-content;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
